rudy-db/tests/snapshots/function_discovery@aarch64-apple-darwin-3.snap
---
source: rudy-db/tests/static_tests.rs
expression: subset
snapshot_kind: text
---
{
    "simple_test::function_call": DiscoveredFunction {
        name: "function_call",
        full_name: "simple_test::function_call",
        signature: "fn function_call(x: i32) -> i32",
        address: 4294969480,
        callable: true,
        module_path: [
            "simple_test",
        ],
        return_type: Some(
            TypeDefinition {
                layout: Primitive(
                    Int(
                        IntLayout {
                            size: 4,
                        },
                    ),
                ),
                location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/examples/simple_test-b2987a769e7398e2.4ys7de4jd11fqxl03vm99it60.1ojx9kh.rcgu.o 0x000000c5,
            },
        ),
        parameters: [
            FunctionParameter {
                name: Some(
                    "x",
                ),
                type_def: TypeDefinition {
                    layout: Primitive(
                        Int(
                            IntLayout {
                                size: 4,
                            },
                        ),
                    ),
                    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/examples/simple_test-b2987a769e7398e2.4ys7de4jd11fqxl03vm99it60.1ojx9kh.rcgu.o 0x000000c5,
                },
            },
        ],
    },
    "simple_test::main": DiscoveredFunction {
        name: "main",
        full_name: "simple_test::main",
        signature: "fn main()",
        address: 4294969584,
        callable: true,
        module_path: [
            "simple_test",
        ],
        return_type: None,
        parameters: [],
    },
}
