rudy-db/tests/snapshots/function_discovery@x86_64-apple-darwin-2.snap
---
source: rudy-db/tests/static_tests.rs
expression: function_call_functions
snapshot_kind: text
---
[
    DiscoveredFunction {
        name: "function_call",
        full_name: "simple_test::function_call",
        signature: "fn function_call(x: i32) -> i32",
        address: 4294969824,
        callable: true,
        module_path: [
            "simple_test",
        ],
        return_type: Some(
            TypeDefinition {
                layout: Primitive(
                    Int(
                        IntLayout {
                            size: 4,
                        },
                    ),
                ),
                location: Die at DebugFile { [salsa id]: Id(807) } 0x000000c6,
            },
        ),
        parameters: [
            FunctionParameter {
                name: Some(
                    "x",
                ),
                type_def: TypeDefinition {
                    layout: Primitive(
                        Int(
                            IntLayout {
                                size: 4,
                            },
                        ),
                    ),
                    location: Die at DebugFile { [salsa id]: Id(807) } 0x000000c6,
                },
            },
        ],
    },
]
