rudy-db/tests/snapshots/function_discovery@x86_64-apple-darwin-3.snap
---
source: rudy-db/tests/static_tests.rs
expression: subset
snapshot_kind: text
---
{
    "simple_test::function_call": DiscoveredFunction {
        name: "function_call",
        full_name: "simple_test::function_call",
        signature: "fn function_call(x: i32) -> i32",
        address: 4294969600,
        callable: true,
        module_path: [
            "simple_test",
        ],
        return_type: Some(
            TypeDefinition {
                layout: Primitive(
                    Int(
                        IntLayout {
                            size: 4,
                        },
                    ),
                ),
                location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/x86_64-apple-darwin/simple_test-dbe642f4dd4f59d8.7ksbxthbq75640r9t9o1wr3yl.1svvj7e.rcgu.o 0x000000c6,
            },
        ),
        parameters: [
            FunctionParameter {
                name: Some(
                    "x",
                ),
                type_def: TypeDefinition {
                    layout: Primitive(
                        Int(
                            IntLayout {
                                size: 4,
                            },
                        ),
                    ),
                    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/x86_64-apple-darwin/simple_test-dbe642f4dd4f59d8.7ksbxthbq75640r9t9o1wr3yl.1svvj7e.rcgu.o 0x000000c6,
                },
            },
        ],
    },
    "simple_test::main": DiscoveredFunction {
        name: "main",
        full_name: "simple_test::main",
        signature: "fn main()",
        address: 4294969680,
        callable: true,
        module_path: [
            "simple_test",
        ],
        return_type: None,
        parameters: [],
    },
}
