rudy-db/tests/snapshots/function_discovery@x86_64-unknown-linux-gnu-2.snap
---
source: rudy-db/tests/static_tests.rs
expression: function_call_functions
snapshot_kind: text
---
[
    DiscoveredFunction {
        name: "function_call",
        full_name: "simple_test::function_call",
        signature: "fn function_call(x: i32) -> i32",
        address: 31760,
        callable: true,
        module_path: [
            "simple_test",
        ],
        return_type: Some(
            TypeDefinition {
                layout: Primitive(
                    Int(
                        IntLayout {
                            size: 4,
                        },
                    ),
                ),
                location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/x86_64-unknown-linux-gnu/examples/simple_test 0x00000eb8,
            },
        ),
        parameters: [
            FunctionParameter {
                name: Some(
                    "x",
                ),
                type_def: TypeDefinition {
                    layout: Primitive(
                        Int(
                            IntLayout {
                                size: 4,
                            },
                        ),
                    ),
                    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/x86_64-unknown-linux-gnu/examples/simple_test 0x00000eb8,
                },
            },
        ],
    },
]
