rudy-db/tests/snapshots/function_discovery@x86_64-unknown-linux-gnu-3.snap
---
source: rudy-db/tests/static_tests.rs
expression: subset
snapshot_kind: text
---
{
    "simple_test::function_call": DiscoveredFunction {
        name: "function_call",
        full_name: "simple_test::function_call",
        signature: "fn function_call(x: i32) -> i32",
        address: 31456,
        callable: true,
        module_path: [
            "simple_test",
        ],
        return_type: Some(
            TypeDefinition {
                layout: Primitive(
                    Int(
                        IntLayout {
                            size: 4,
                        },
                    ),
                ),
                location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/x86_64-unknown-linux-gnu/simple_test 0x00000427,
            },
        ),
        parameters: [
            FunctionParameter {
                name: Some(
                    "x",
                ),
                type_def: TypeDefinition {
                    layout: Primitive(
                        Int(
                            IntLayout {
                                size: 4,
                            },
                        ),
                    ),
                    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/x86_64-unknown-linux-gnu/simple_test 0x00000427,
                },
            },
        ],
    },
    "simple_test::main": DiscoveredFunction {
        name: "main",
        full_name: "simple_test::main",
        signature: "fn main()",
        address: 31536,
        callable: true,
        module_path: [
            "simple_test",
        ],
        return_type: None,
        parameters: [],
    },
}
