rudy-db/tests/snapshots/generated_benchmarks@large-2.snap
---
source: rudy-db/tests/mod.rs
expression: "debug_info.resolve_function(\"main\").unwrap().unwrap()"
---
ResolvedFunction {
    name: "large::main",
    address: "0x1000087d0",
    params: [],
}
